Various polish fixes:
 - Loading state for graph
 - Added fake latency cookie value to test loading
 - If metrics provider has no series/stats for the service show something that doesn't look broken
 - Graph hover works right to the edge now
 - Stats boxes now wrap so they are either shown or not as will fit not cut off
 - Graph resizes when browser window size changes
 - Some tweaks to number formats and stat metrics to make them more compact/useful

--- a/ui-v2/app/components/topology-metrics/series/layout.scss
+++ b/ui-v2/app/components/topology-metrics/series/layout.scss
@@ -23,5 +23,17 @@
   .sparkline-tt-legend-color {
     display: inline-block;
   }
+
+  div.sparkline-loader {
+    font-weight: normal;
+    padding-top: 15px;
+    font-size: 0.875rem;
+    color: $gray-500;
+    text-align: center;
+
+    span::after {
+      @extend %with-loading-icon, %as-pseudo;
+    }
+  }
 }
 
